[tool.poetry]
name = "lnbits-example"
version = "0.0.0"
description = "LNbits utils for extension developers"
authors = ["Alan Bits <alan@lnbits.com>"]

[tool.poetry.dependencies]
python = "^3.10 | ^3.9 | ^3.8 | ^3.7"
lnbits = "^0.10.3"

[tool.isort]
profile = "black"

[tool.pyright]
include = [
  "."
]

[tool.mypy]
files = "."
follow_imports = "silent"

[[tool.mypy.overrides]]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "--durations=1"
testpaths = [
  "tests"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "all"
enable = [
    "assignment-from-none",
    "chained-comparison",
    "consider-merging-isinstance",
    "consider-using-dict-comprehension",
    "consider-using-dict-items",
    "consider-using-f-string",
    "consider-using-in",
    "dangerous-default-value",
    "inconsistent-return-statements",
    "lost-exception",
    "pointless-string-statement",
    "simplifiable-if-statement",
    "super-init-not-called",
    "superfluous-parens",
    "unused-variable",
    "use-list-literal",
    "useless-else-on-loop",
    "useless-object-inheritance",
]

[tool.pylint.MASTER]
fail-under = 10.0
jobs = 0
